# wildDDG

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
data/: shell.html
scripts/: filter_thingi10k.ipynb
src/: CMakeLists.txt  SurfaceViewer.cpp  SurfaceViewer.h  parameter_sweep.cpp  run_poly_tests.cpp  run_thingi10k_tests.cpp  run_tri_tests.cpp  run_unstructured_tri_tests.cpp  web_demo.cpp
src/Laplacians/: bunge_poly_laplace.cpp  bunge_poly_laplace.h  cgal_laplacian.cpp  cgal_laplacian.h  construct_laplace.cpp  construct_laplace.h  geogram_laplacian.h  intrinsic_delaunay.cpp  intrinsic_delaunay.h  openmesh_laplacian.h  optimized_laplace.cpp  optimized_laplace.h  vcglib_laplacian.h
src/util/: Curvature.cpp  Curvature.h  GeodesicsInHeat.cpp  GeodesicsInHeat.h  bipoisson_solver.h  condition_number.h  cylinder_generator.h  deformation_solver.cpp  deformation_solver.h  enums.h  geodesics_solver.cpp  geodesics_solver.h  grid_generator.h  h1_seminorm.h  hole_filling.h  mesh_converter.h  parameterization.cpp  parameterization.h  poisson_solver.h  smoothing_solver.h  system_solver.h
src/util/marching_cubes/: Grid.cpp  Grid.h  MarchingCubes.cpp  MarchingCubes.h
